<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yourusernametext">Your Username:</string>
    <string name="otherusernametext">Other Person\'s Username:</string>
    <string name="usernamereqtext">Username is required!</string>
    <string name="othernamereqtext">The other person\'s username is required!</string>
    <string name="oktext">OK</string>
    <string name="canceltext">Cancel</string>
    <string name="heading1">Welcome to the Chat!</string>
    <string name="heading1b">Establishing Communications…</string>
    <string name="heading1c">Your conversation with</string>
    <string name="heading2">Your next statement:</string>
    <string name="sendtext">Send</string>
    <string name="hint">Text To Send</string>
    <string name="message_sent">Message Sent</string>
    <string name="message_received">Message Received</string>
    <string name="yousaidtext">You said:</string>
    <string name="othersaidtext">said:</string>
    <string name="quittext">quit</string>
    <string name="nowonlinetext">is now online.</string>
    <string name="notonlinetext">is not online right now.</string>
    <string name="nowofflinetext">is now offline.</string>
    
</resources>
