<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity" >
    <TextView
        android:id="@+id/textviewHead1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#AAAAAA"
        android:text="@string/heading1" />

    <TextView
        android:id="@+id/textviewReceived"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines = "9"
        android:maxLines = "9"
        android:background="#00ff00"
        android:textColor="#000000"
        android:scrollbars = "vertical"
        android:textIsSelectable = "true" />

    <TextView
        android:id="@+id/textviewHead2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#AAAAAA"
        android:text="@string/heading2" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="fill_parent">

        <EditText
            android:id="@+id/edittextSent"
            android:layout_width="0dip"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="@string/hint"
            android:inputType="text" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#888888"
            android:text="@string/sendtext" >

        </Button>
    </LinearLayout>
    
</LinearLayout>